# shiny-automate

./: Cargo.toml
src/: main.rs
src/shiny_mas/: song.rs
