[package]
name = "shiny-automate"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
mouse-rs = "0.4.2"
screenshots = "0.8.10"
win_ocr = "0.1.3"
winapi = { version = "0.3", features = ["winuser"] }

[dependencies.image]
version = "0.24"
default-features = false
features = [
    "jpeg",
    "png",
    "bmp",
    "tiff"
]
